--- a/CockTailSort/CockTailSort/Algorithmns_CockTailSort.csproj
+++ b/CockTailSort/CockTailSort/Algorithmns_CockTailSort.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F841902F-0F7A-4246-A4D4-33C0606EE377}</ProjectGuid>
+    <ProjectGuid>{9548ACE4-6E36-4F56-AF0E-44318F28CBC6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShellSort</RootNamespace>
-    <AssemblyName>ShellSort</AssemblyName>
+    <RootNamespace>Algorithmns_CockTailSort</RootNamespace>
+    <AssemblyName>Algorithmns_CockTailSort</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Algorithmns_CockTailSort.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
