--- a/MergeSort/MergeSort/Algorithms_MergeSort.csproj
+++ b/MergeSort/MergeSort/Algorithms_MergeSort.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DFDADA36-BE18-4C5A-9419-60FC3258B66C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MergeSort</RootNamespace>
-    <AssemblyName>MergeSort</AssemblyName>
+    <RootNamespace>Algorithmns_MergeSort</RootNamespace>
+    <AssemblyName>Algorithmns_MergeSort</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
