--- a/SelectionSort/SelectionSort/Algorithmns_SelectionSort.csproj
+++ b/SelectionSort/SelectionSort/Algorithmns_SelectionSort.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9548ACE4-6E36-4F56-AF0E-44318F28CBC6}</ProjectGuid>
+    <ProjectGuid>{98A4D389-9CE7-415E-A0F4-6D292E9D512B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CockTailSort</RootNamespace>
-    <AssemblyName>CockTailSort</AssemblyName>
+    <RootNamespace>Algorithmns_SelectionSort</RootNamespace>
+    <AssemblyName>Algorithmns_SelectionSort</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Algorithmns_SelectionSort.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
