--- a/ShellSort/ShellSort/Algorithmns_ShellSort.csproj
+++ b/ShellSort/ShellSort/Algorithmns_ShellSort.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98A4D389-9CE7-415E-A0F4-6D292E9D512B}</ProjectGuid>
+    <ProjectGuid>{F841902F-0F7A-4246-A4D4-33C0606EE377}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SelectionSort</RootNamespace>
-    <AssemblyName>SelectionSort</AssemblyName>
+    <RootNamespace>Algorithmns_ShellSort</RootNamespace>
+    <AssemblyName>Algorithmns_ShellSort</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Algorithmns_ShellSort.SortShell</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
