--- a/Example_AsyncAwaitExample/Example_AsyncAwaitExample/Example_AsyncAwaitExample.csproj
+++ b/Example_AsyncAwaitExample/Example_AsyncAwaitExample/Example_AsyncAwaitExample.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{190203EE-9448-4C9F-A2B1-ED5871A4540B}</ProjectGuid>
+    <ProjectGuid>{28E78F41-207C-4EB4-ADD4-D0934BCFC381}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FibonacciSeries</RootNamespace>
-    <AssemblyName>FibonacciSeries</AssemblyName>
+    <RootNamespace>Example_AsyncAwaitExample</RootNamespace>
+    <AssemblyName>Example_AsyncAwaitExample</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,9 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Notes.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
