--- a/HeapSort/HeapSort/Algorithmns_HeapSort.csproj
+++ b/HeapSort/HeapSort/Algorithmns_HeapSort.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{053F18CF-9E5E-4362-87AA-D37F5A750525}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeapSort</RootNamespace>
-    <AssemblyName>HeapSort</AssemblyName>
+    <RootNamespace>Algorithmns_HeapSort</RootNamespace>
+    <AssemblyName>Algorithmns_HeapSort</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>HeapSort</StartupObject>
+    <StartupObject>HeapSort.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
