--- a/Example_SubStringInString/Example_SubStringInString/Example_SubStringInString.csproj
+++ b/Example_SubStringInString/Example_SubStringInString/Example_SubStringInString.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{190203EE-9448-4C9F-A2B1-ED5871A4540B}</ProjectGuid>
+    <ProjectGuid>{89AF9D80-CB83-4516-A0D1-1716BF054DA3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FibonacciSeries</RootNamespace>
-    <AssemblyName>FibonacciSeries</AssemblyName>
+    <RootNamespace>Example_SubStringInString</RootNamespace>
+    <AssemblyName>Example_SubStringInString</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,9 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Notes.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
